<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:padding="15dp"
android:id="@+id/recylcer_layout"
tools:context=".AdvertisementFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_destination"
        android:id="@+id/final_destination"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/start_destination"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_destination"
            android:id="@+id/start_destination"
            android:textColor="#000"
            android:textSize="14sp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_stop_b_stop_c_final_destination"
            android:id="@+id/stop_list"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/final_destination"
            />



    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capacity_2_6"
            android:id="@+id/car_capacity"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/stop_list"
           />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_red_honda_civic"
            android:id="@+id/vehicleField"
            android:textColor="#000"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/car_capacity"
    />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/vehicleField"
            android:text="modify"
            android:onClick=""
            android:id="@+id/modifyAdButton"

            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/deleteAdButton"
            app:layout_constraintLeft_toRightOf="@id/modifyAdButton"
            app:layout_constraintTop_toBottomOf="@id/vehicleField"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10_22_2018"
            android:id="@+id/date"
            android:textColor="#666"
            android:textSize="12sp"
            android:gravity="right"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/depart_3_29_pm"
            android:id="@+id/time"
            android:textColor="#666"
            android:textSize="12sp"
            android:gravity="right"
            app:layout_constraintTop_toBottomOf="@id/date"
    />





</android.support.constraint.ConstraintLayout>