<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="10dp"
                                             tools:context=".ChangeAdvertisementActivity"
                                             app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/advertisement_viewer_title"
                    android:text="@string/advertisement_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/advertisement_title"
                    android:layout_toEndOf="@id/advertisement_viewer_title"
                    android:layout_toRightOf="@id/advertisement_viewer_title"
                    android:id="@+id/advertisement_title_textfield"
                    android:layout_height="30dp"
                    android:textSize="9dp"/>
        </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/advertisement_viewer_startsAtLocation"
                    android:text="@string/start_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/start_location"
                    android:layout_toEndOf="@id/advertisement_viewer_startsAtLocation"
                    android:layout_toRightOf="@id/advertisement_viewer_startsAtLocation"
                    android:id="@+id/advertisement_start_textfield"
                    android:layout_height="30dp"
                    android:textSize="9dp"/>
            </RelativeLayout>

            <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/advertisement_viewer_seating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availableSeating"
                    android:textColor="#131d21"
                    android:textSize="15sp" />
            <EditText
                    android:layout_width="100dp"
                    android:hint="@string/availableSeating"
                    android:layout_toEndOf="@id/advertisement_viewer_seating"
                    android:layout_toRightOf="@id/advertisement_viewer_seating"
                    android:inputType="number"
                    android:id="@+id/advertisement_seating_textfield"
                    android:layout_height="30dp"
                    android:textSize="9dp"/>
        </RelativeLayout>


            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stops"
                    android:textColor="#131d21"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp" />

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvStopsForJourney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <Button
                    android:id="@+id/advertisement_confirm_modify_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>