<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FullscreenActivity_signup">
    <!--  -->
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </LinearLayout>

            <TextView
                android:id="@+id/signupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/signuptitle"
                android:textColor="@android:color/black"
                android:textSize="35sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="34dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_person_pin_black_24dp" />

                <EditText
                    android:id="@+id/signUpnameText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signupname"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp" />
                <EditText
                    android:id="@+id/signUpPasswordtext"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signuppassword"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_lock_outline_black_24dp" />
                <EditText
                    android:id="@+id/confirmPasswordText"
                    android:layout_width="249dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signuppasswordconfirm"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textColor="#000000" />
            </LinearLayout>
            <TextView
                android:id="@+id/errormsg"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <Button
                android:id="@+id/toRegisterButton"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:onClick="addParticipant"
                android:text="@string/signupbutton"
                android:textColor="@android:color/white" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />
            <TextView
                android:id="@+id/toLoginText"
                android:layout_width="287dp"
                android:layout_height="32dp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="toLogin"
                android:text="@string/toLogin" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        </LinearLayout>
    </FrameLayout>

</FrameLayout>